+@mduenias added missing tests + refactoring code + changed com.sun Base64 for java.utils Base64